Minor Enhancement #5554: Default Maori Characters Remapping for WebPath.
Minor Enhancement #5557: Restricted File URL Memory.
Minor Enhancement #5577: Online Quiz: Server Side Validation.
Minor Enhancement #5584: Matrix to Not Poll LDAP During Root User Authentication.
Minor Enhancement #5585: Automatic Upgrade Script: Allow PHP Options.

Core

Fixed Bug #5533: Asset Builder asset's Dynamic Create Locations ignore LDAP user group membership.
Fixed Bug #5534: Incorrect LEFT JOIN causes performance issue in asset_manager's getAllChildLinks.
Fixed Bug #5546: Inaccurate label on the insert image popup of the WYSIWYG.
Fixed Bug #5555: Embed YouTube Video by URL improvement.
Fixed Bug #5558: Import assets from XML errors when setting permission for online quiz asset.
Fixed Bug #5560: Warranty key expiry screen shows up in SOAP API call.
Fixed Bug #5562: Asset Map supported java versions.
Fixed Bug #5563: root_nodes keyword does not work with modifiers unless used without them first.
Fixed Bug #5564: Issue with viewing workflow logs.
Fixed Bug #5567: WYSIWYG select text colour on multiple table cells removes cell tag.
Fixed Bug #5569: System alternative proxy setting wiped when running installation step 3.
Fixed Bug #5572: Conditional Keyword for Paint Layout doesn't let you configure the question id in keywords like 'question_answer_X_qY'.
Fixed Bug #5574: Form file upload problem with IOS device.
Fixed Bug #5576: Edit permission HIPO goes over 100%.
Fixed Bug #5581: tags converted to character references when inside a span when lang attribute removed.
Fixed Bug #5583: Revert safe edit assets status with notice links fatal errors when multiple context is defined.
Fixed Bug #5587: WYSIWYG Insert link for redirect page or link asset doesn't work with manual entering of the asset ID.
Fixed Bug #5588: Thesaurus metadata field keywords not replaced by JS API getKeywordReplacements.
Fixed Bug #5595: Import assets from XML tool sometimes fails if the xml has invalid characters.